# Orion_CM4

./: .gitignore  AGENTS.md  CM4_setup.md  README.md  SETUP.md  USB_Cam_Test.py  a.out  ai_cmd_v2.out  authorized_keys  b.out  ball_detector.py  c.out  cam_server.py  cam_server_2.py  cam_server_v2.py  cam_server_v3.py  cam_server_v3.spec  cam_viewer.py  check_ai_command.cpp  cm4_camera.py  cm4_control.py  control_server.service  docker-compose.yaml  dummy_feedback_to_ai.cpp  dummy_orion.cpp  forward_ai_cmd_v2.cpp  forward_ai_command.cpp  forward_robot_feedback.cpp  forward_robot_feedback2.cpp  host_lancher.py  lancher.py  local_cam_cli.py  multi_thread_cam.py  orion_comunication_core.cpp  orion_receaver.cpp  orion_sender.cpp  orion_sender.cpp.save  pyproject.toml  robot_feedback.out  robot_feedback_packet.py  (+7 more)
.github/workflow/: build.yaml
.github/workflows/: build.yml  robot-manager-docker.yml
cm4_cam/: __init__.py  cam_server_v1.py  cam_server_v2.py  cam_server_v3.py  cam_server_v3.spec  default_hsv_config.json
cpp_local_cam/: CMakeLists.txt
cpp_local_cam/src/: ApiServer.cpp  ApiServer.hpp  Capture.cpp  Capture.hpp  Detector.cpp  Detector.hpp  Gui.cpp  Gui.hpp  UdpSender.cpp  UdpSender.hpp  main.cpp
doc/: camera.md  control_packet.md  feedback_packet.md  host_tools.md  overview.md
old/: USB_Cam_Test.py  a.out  b.out
orion_cm4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
robot-manager/: Dockerfile  server.py
robot-manager/web/: app.js  index.html  m3e-theme.css
templates/: index.html
