[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-cm4"
version = "0.1.0"
description = "Host and CM4 control utilities for Orion_CM4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "flask",
    "numpy",
    "opencv-python",
    "pillow",
    "pyside6",
    "rerun-sdk",
    "requests",
    "uvicorn",
]

[project.scripts]
cm4-control = "cm4_control:main"
cm4-camera = "cm4_camera:main"
host-launcher = "host_lancher:main"
cam-viewer = "cam_viewer:main"
robot-feedback-receiver = "robot_feedback_receiver:main"
robot-feedback-rerun = "robot_feedback_rerun:main"

[tool.setuptools]
py-modules = [
    "cam_viewer",
    "cm4_camera",
    "cm4_control",
    "host_lancher",
    "lancher",
    "robot_feedback_packet",
    "robot_feedback_receiver",
    "robot_feedback_rerun",
]
packages = ["cm4_cam"]
